[gd_scene load_steps=20 format=3 uid="uid://doyiqcdrwlcai"]

[ext_resource type="Script" uid="uid://bmoqup45xjust" path="res://Scripts/Scene/intro_scene.gd" id="1_do8qe"]
[ext_resource type="AudioStream" uid="uid://c6v1t75vlsu2o" path="res://Assets/Sound/computer-mouse-click-351398.mp3" id="1_osinj"]
[ext_resource type="Texture2D" uid="uid://bsu0g38gxhlnu" path="res://Assets/OS/WindowsModal/mouse.png" id="2_61nrx"]
[ext_resource type="Texture2D" uid="uid://bnkia1o2ul1fe" path="res://Assets/OS/WindowsModal/Descktop.jpg" id="3_61nrx"]
[ext_resource type="AudioStream" uid="uid://cmwc7j1301feq" path="res://Assets/Sound/windows-xp-startup.mp3" id="3_i5w0n"]
[ext_resource type="Texture2D" uid="uid://ctau1dh86qc2k" path="res://Assets/OS/WindowsModal/Directory.png" id="4_xg3ik"]
[ext_resource type="Texture2D" uid="uid://bfiu8c484c5ql" path="res://Assets/OS/WindowsModal/TutoriaBG.png" id="5_me210"]
[ext_resource type="Texture2D" uid="uid://c13mofgr5k6ia" path="res://Assets/OS/WindowsModal/exeicona.png" id="6_41kxk"]
[ext_resource type="Texture2D" uid="uid://2dqvrkgwyvqr" path="res://Assets/OS/WindowsModal/CloseButton.png" id="8_rpyjo"]
[ext_resource type="PackedScene" uid="uid://demrp3b7cbg6q" path="res://Scenes/GUI/notification.tscn" id="9_c4drt"]
[ext_resource type="FontFile" uid="uid://bw5i31g4qhsm" path="res://Assets/superstar_memesbruh03.ttf" id="10_i5w0n"]

[sub_resource type="Animation" id="Animation_me210"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouseSprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouseSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MouseSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MouseSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(674, 369)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_rpyjo"]
resource_name = "click_exe"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouseSprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouseSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MouseSprite:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.93333, 2.7),
"transitions": PackedFloat32Array(1, 59.7141, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.748075,
"start_offset": 0.0,
"stream": ExtResource("1_osinj")
}],
"times": PackedFloat32Array(2.7)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MouseSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(66, 69), Vector2(470, 500)]
}

[sub_resource type="Animation" id="Animation_xg3ik"]
resource_name = "click_modal"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouseSprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouseSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MouseSprite:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.93333, 2.7),
"transitions": PackedFloat32Array(1, 59.7141, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.748075,
"start_offset": 0.0,
"stream": ExtResource("1_osinj")
}],
"times": PackedFloat32Array(2.7)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MouseSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(674, 369), Vector2(66, 69)]
}

[sub_resource type="Animation" id="Animation_b61ao"]
resource_name = "wind_open"
length = 4.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.916343,
"start_offset": 0.0,
"stream": ExtResource("3_i5w0n")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41kxk"]
_data = {
&"RESET": SubResource("Animation_me210"),
&"click_exe": SubResource("Animation_rpyjo"),
&"click_modal": SubResource("Animation_xg3ik"),
&"wind_open": SubResource("Animation_b61ao")
}

[sub_resource type="Animation" id="Animation_do8qe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Modal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Modal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_41kxk"]
resource_name = "open"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Modal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.133972, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(20, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Modal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpyjo"]
_data = {
&"RESET": SubResource("Animation_do8qe"),
&"open": SubResource("Animation_41kxk")
}

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_do8qe")

[node name="Sfondo" type="Sprite2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MouseAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_41kxk")
}

[node name="MouseSprite" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(674, 369)
scale = Vector2(2, 2)
texture = ExtResource("2_61nrx")
hframes = 2
vframes = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 2574.0
offset_bottom = 1448.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_61nrx")

[node name="Directory" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(66, 69)
scale = Vector2(3, 3)
texture = ExtResource("4_xg3ik")

[node name="ModalOpening" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rpyjo")
}

[node name="Modal" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(671, 343)
texture = ExtResource("5_me210")

[node name="Exe" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(470, 500)
scale = Vector2(2, 2)
texture = ExtResource("6_41kxk")

[node name="Directory2" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(470, 400)
scale = Vector2(3, 3)
texture = ExtResource("4_xg3ik")

[node name="Directory3" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(470, 300)
scale = Vector2(3, 3)
texture = ExtResource("4_xg3ik")

[node name="XBtn" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(972, 38)
texture = ExtResource("8_rpyjo")

[node name="explorer" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 419.0
offset_top = 78.0
offset_right = 549.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_i5w0n")
theme_override_font_sizes/font_size = 32
text = "Explorer
"

[node name="Dir2" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 550.0
offset_top = 300.0
offset_right = 697.0
offset_bottom = 441.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_i5w0n")
theme_override_font_sizes/font_size = 16
text = "Cartella 1

"

[node name="Dir3" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 550.0
offset_top = 400.0
offset_right = 680.0
offset_bottom = 493.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_i5w0n")
theme_override_font_sizes/font_size = 16
text = "Cartella 2"

[node name="ABugFix" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 550.0
offset_top = 500.0
offset_right = 691.0
offset_bottom = 593.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_i5w0n")
theme_override_font_sizes/font_size = 16
text = "a_bug_fix.exe
"

[node name="Notification" parent="." instance=ExtResource("9_c4drt")]
z_index = 3
layout_mode = 0
offset_left = 510.0
offset_top = 306.0
offset_right = 895.0
offset_bottom = 405.0
text = "Malware rilevato: Defender attivato;

Error: 0x000000FE
(0x000000008, 0x000000006, 0x000000009,
 0x0x847075CC)"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 0
offset_top = -7.0
offset_right = 1288.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)
